# 123

./: .env.example  .gitignore  Makefile  README.md  package.json
apps/desktop/: package.json  tsconfig.json
apps/desktop/electron/: main.js
apps/desktop/src/: main.tsx
docs/: BEGINNER_GUIDE.md
services/backend/: pyproject.toml
services/backend/app/: main.py
services/backend/app/core/: config.py
services/backend/app/db/: database.py  models.py
services/backend/app/schemas/: schemas.py
services/backend/app/services/: allowlist.py  dedup.py  docx_export.py  evidence.py  ris_parser.py  scheduler.py
services/backend/app/tests/: test_allowlist.py  test_dedup.py  test_evidence_schema.py  test_ris_parser.py
services/backend/app/workflow/: orchestrator.py
services/backend/scripts/: run_weekly.py
