[project]
name = "litreviewagent-backend"
version = "0.1.0"
description = "FastAPI backend for LitReviewAgent"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn>=0.30.0",
  "sqlalchemy>=2.0.31",
  "pydantic>=2.8.0",
  "python-dotenv>=1.0.1",
  "apscheduler>=3.10.4",
  "python-docx>=1.1.2",
  "openai>=1.40.0",
  "playwright>=1.46.0",
  "httpx>=0.27.0",
]

[project.optional-dependencies]
pdf = ["pymupdf>=1.24.9"]
test = ["pytest>=8.2.0"]

[tool.pytest.ini_options]
pythonpath = ["app"]
addopts = "-q"

